# object_detection

./: CMakeLists.txt  README.md  package.xml
launch/: object_detection_launch.py
object_detection/: README.md  object_detector.py
